--- a/index.html
+++ b/index.html
@@ -459,8 +459,11 @@
             <h2 class="text-4xl font-bold font-code text-center text-white">Threat Intelligence Feed</h2>
             <p class="mt-4 text-lg text-slate-gray text-center max-w-3xl mx-auto">Insights from the front lines of cybersecurity. Analysis, trends, and actionable expert advice.</p>
 			<div class="video-wrapper">
-                <!-- Replaced local video with a responsive, theme-appropriate static image -->
-				<img src="https://source.unsplash.com/1280x720/?cyberpunk,city" alt="Cyberpunk city skyline representing modern threat intelligence">
+                <video controls autoplay muted width="1280" height="720">
+					<!-- Add your .mp4 source here -->
+					<source src="Cyberpunk_Logo_Video_SafeHarbor.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
 			</div>
             <div class="mt-16">
                 <h3 class="text-3xl font-bold font-code text-center text-white">The Digital Watchtower Podcast</h3>
