--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             
              <div class="mt-20 max-w-5xl mx-auto grid md:grid-cols-3 gap-8 md:gap-12 items-center">
                 <div class="md:col-span-1">
-                    <img src="https://placehold.co/400x400/1B263B/E0E1DD?text=P.N." alt="Portrait of Patrick Nagel" class="w-full object-cover rounded-lg shadow-lg">
+                    <img src="https://placehold.co/400x400/1B263B/E0E1DD?text=CEO.PN" alt="Portrait of Patrick Nagel" class="w-full object-cover rounded-lg shadow-lg">
                 </div>
                 <div class="md:col-span-2 bg-secondary-dark p-8 rounded-lg">
                     <div>
@@ -458,10 +458,9 @@
 		<section id="blog" class="section">
             <h2 class="text-4xl font-bold font-code text-center text-white">Threat Intelligence Feed</h2>
             <p class="mt-4 text-lg text-slate-gray text-center max-w-3xl mx-auto">Insights from the front lines of cybersecurity. Analysis, trends, and actionable expert advice.</p>
-			<div class="video-wrapper">
-                <video controls autoplay muted width="1280" height="720">
-					<!-- Add your .mp4 source here -->
-					<source src="Cyberpunk_Logo_Video_SafeHarbor.mp4" type="video/mp4">
+			<div class="video-wrapper" style="background-color: transparent;">
+				<video controls autoplay muted width="1280" height="720">				
+					<source src="https://www.safeharborsec.tech/Cyberpunk_Logo_Video_SafeHarbor.mp4" type="video/mp4">									
 					Your browser does not support the video tag.
 				</video>
 			</div>
@@ -474,9 +473,8 @@
                         <p class="text-sm text-accent font-code flex items-center gap-2"><i data-feather="mic" class="w-4 h-4"></i>Episode 01</p>
                         <h4 class="mt-1 text-xl font-bold text-white">The Rise of Adversarial AI</h4>
                         <p class="mt-2 text-slate-gray text-sm">We discuss how attackers are weaponizing AI and what businesses can do to prepare for the next wave of intelligent threats.</p>
-                        <!-- NOTE: Local audio files like 'HumanHacking+AIThreats_YourFrontlineGuidetoCybersecurity.mp3' must be hosted to be playable. -->
                         <audio controls class="w-full mt-4">
-                            <source src="HumanHacking+AIThreats_YourFrontlineGuidetoCybersecurity.mp3" type="audio/mpeg">
+                            <source src="https://www.safeharborsec.tech/HumanHacking+AIThreats_YourFrontlineGuidetoCybersecurity.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -485,9 +483,8 @@
                          <p class="text-sm text-accent font-code flex items-center gap-2"><i data-feather="mic" class="w-4 h-4"></i>Episode 02</p>
                          <h4 class="mt-1 text-xl font-bold text-white">Securing the Human Element</h4>
                          <p class="mt-2 text-slate-gray text-sm">A conversation with a social engineering expert on the psychology of phishing and building a culture of security.</p>
-                         <!-- NOTE: Local audio files like 'HumanHacking_TheExplodingCyberThreatandHowtoFightBack.mp3' must be hosted to be playable. -->
                          <audio controls class="w-full mt-4">
-                            <source src="HumanHacking_TheExplodingCyberThreatandHowtoFightBack.mp3" type="audio/mpeg">
+                            <source src="https://www.safeharborsec.tech/HumanHacking_TheExplodingCyberThreatandHowtoFightBack.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -500,7 +497,7 @@
                 <div class="mt-12 grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Blog Post Card -->
                     <div class="bg-secondary-dark rounded-lg overflow-hidden shadow-lg group">
-                        <img src="https://source.unsplash.com/600x400/?code,analysis" alt="Screen with code and data charts for analysis" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="https://www.safeharborsec.tech/chart.png" alt="Screen with code and data charts for analysis" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-6">
                             <p class="text-sm text-accent font-code flex items-center gap-2"><i data-feather="alert-triangle" class="w-4 h-4"></i>Ransomware</p>
                             <h3 class="mt-2 text-xl font-bold text-white">Anatomy of the "LockForge" Ransomware Attack</h3>
@@ -510,7 +507,7 @@
                     </div>
                     <!-- Blog Post Card -->
                     <div class="bg-secondary-dark rounded-lg overflow-hidden shadow-lg group">
-                        <img src="https://source.unsplash.com/600x400/?phishing,hacker" alt="Anonymous hacker figure in a hoodie" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="https://www.safeharborsec.tech/anon.png" alt="Anonymous hacker figure in a hoodie" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-6">
                             <p class="text-sm text-accent font-code flex items-center gap-2"><i data-feather="users" class="w-4 h-4"></i>Social Engineering</p>
                             <h3 class="mt-2 text-xl font-bold text-white">Beyond the Bait: The Rise of AI-Powered Phishing</h3>
@@ -520,7 +517,7 @@
                     </div>
                     <!-- Blog Post Card -->
                     <div class="bg-secondary-dark rounded-lg overflow-hidden shadow-lg group">
-                        <img src="https://source.unsplash.com/600x400/?cloud,security" alt="Server racks in a data center representing cloud security" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="https://www.safeharborsec.tech/datacenter.png" alt="Server racks in a data center representing cloud security" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-6">
                             <p class="text-sm text-accent font-code flex items-center gap-2"><i data-feather="cloud" class="w-4 h-4"></i>Cloud Security</p>
                             <h3 class="mt-2 text-xl font-bold text-white">Top 5 Misconfigurations in AWS That Lead to Breaches</h3>
