--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
                         <h3 class="text-3xl font-bold text-white">Patrick Nagel</h3>
                         <p class="text-accent font-code text-lg">Founder & CEO</p>
                         <blockquote class="mt-6 text-slate-gray space-y-4 leading-relaxed border-l-4 border-accent pl-6 italic">
-                            <p>"At Safe Harbor Securities LLC, my mission has been to deliver robust cybersecurity and compliance solutions, ensuring clients' data, assets, and networks are ironclad against cyber threats..."</p>
-                            <p>"Leveraging tools such as Terraform, Ansible and Chef for IaC, combined with our expertise in cloud-native security, we empower organizations to navigate the complexities of cybersecurity..."</p>
+                            <p>"At Safe Harbor Securities LLC, my mission has been to deliver robust cybersecurity and compliance solutions, ensuring clients' data, assets, and networks are ironclad against cyber threats. With over 4 years at the helm, our team excels in network architecture design, incident detection, and compliance audits, with a focus on SOC ISO27K, HIPAA-HITRUST and PCI-DSS standards."</p>
+                            <p>"Leveraging tools such as virtualization combined with Docker, Terraform, Ansible and Chef for IaC/SOAR, and using our expertise in cloud-native security, we empower organizations to navigate the complexities of cybersecurity. Our approach integrates open-source and proprietary software for detection and response, establishing Safe Harbor Securities as a bastion of security in an era of digital vulnerabilities."</p>
                         </blockquote>
                     </div>
                 </div>
@@ -205,22 +205,43 @@
                 <!-- AI Threat Counteroperations -->
                 <div class="bg-secondary-dark rounded-lg border border-slate-gray/20 p-8 flex flex-col md:flex-row gap-8 items-start">
                     <div class="w-full md:w-1/3"><h3 class="text-2xl font-bold font-code text-accent flex items-center gap-4"><i data-feather="cpu" class="w-8 h-8 flex-shrink-0"></i>AI Threat Counteroperations</h3></div>
-                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">We specialize in defending against next-generation threats targeting your intelligent systems, protecting the integrity of your AI/ML pipelines.</p></div>
+                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">We specialize in defending against next-generation threats targeting your intelligent systems, protecting the integrity of your AI/ML pipelines.</p>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Adversarial AI Red Teaming</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>LLM Security Audits</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Deepfake Detection</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>AI/ML Pipeline Security</li>					
+					
+					</div>
                 </div>
                 <!-- Penetration Testing -->
                 <div class="bg-secondary-dark rounded-lg border border-slate-gray/20 p-8 flex flex-col md:flex-row gap-8 items-start">
                     <div class="w-full md:w-1/3"><h3 class="text-2xl font-bold font-code text-accent flex items-center gap-4"><i data-feather="target" class="w-8 h-8 flex-shrink-0"></i>Penetration Testing</h3></div>
-                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">Our certified ethical hackers use advanced techniques to simulate sophisticated cyberattacks, providing a detailed report with actionable insights.</p></div>
+                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">Our certified ethical hackers use advanced techniques to simulate sophisticated cyberattacks, providing a detailed report with actionable insights to remediate weaknesses and strengthen your defenses.</p>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Network & Web App Testing</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Social Engineering</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Cloud Security Assessments</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Compliance-driven Testing</li>					
+					</div>
                 </div>
                 <!-- Managed Detection & Response -->
                 <div class="bg-secondary-dark rounded-lg border border-slate-gray/20 p-8 flex flex-col md:flex-row gap-8 items-start">
                     <div class="w-full md:w-1/3"><h3 class="text-2xl font-bold font-code text-accent flex items-center gap-4"><i data-feather="shield" class="w-8 h-8 flex-shrink-0"></i>Managed Detection & Response</h3></div>
-                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">Our Security Operations Center (SOC) acts as your dedicated 24/7 cybersecurity team, leveraging AI to analyze threats in real-time.</p></div>
+                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">Our Security Operations Center (SOC) acts as your dedicated 24/7 cybersecurity team. We leverage AI to analyze threats in real-time, providing rapid incident response to contain and neutralize attacks.</p>
+					<li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>24/7 Endpoint & Network Monitoring</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Proactive Threat Hunting</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>SIEM & Log Management</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Incident Response & Forensics</li>
+					</div>
                 </div>
                 <!-- Cybersecurity Consulting -->
                 <div class="bg-secondary-dark rounded-lg border border-slate-gray/20 p-8 flex flex-col md:flex-row gap-8 items-start">
                     <div class="w-full md:w-1/3"><h3 class="text-2xl font-bold font-code text-accent flex items-center gap-4"><i data-feather="briefcase" class="w-8 h-8 flex-shrink-0"></i>Cybersecurity Consulting</h3></div>
-                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">Our virtual CISO (vCISO) services provide the strategic leadership you need to navigate the complex world of cybersecurity and regulatory compliance.</p></div>
+                    <div class="w-full md:w-2/3"><p class="text-light-slate max-w-prose">Our virtual CISO (vCISO) services provide the strategic leadership you need to navigate the complex world of cybersecurity and regulatory compliance.</p>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>24/7 Endpoint & Network Monitoring</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Proactive Threat Hunting</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>SIEM & Log Management</li>
+                                <li class="flex items-center gap-3"><i data-feather="check-circle" class="w-5 h-5 text-accent flex-shrink-0"></i>Incident Response & Forensics</li>					
+					</div>
                 </div>
             </div>
         </section>
@@ -300,40 +321,69 @@
         // --- Initialize Feather Icons ---
         feather.replace();
 
-        // --- Particle Background Logic (Enhanced) ---
-        const particleCanvas = document.getElementById('particle-bg');
-        if (particleCanvas) {
+            // --- Particle Background Logic ---
+            const particleCanvas = document.getElementById('particle-bg');
             const particleCtx = particleCanvas.getContext('2d');
+            particleCanvas.width = window.innerWidth;
+            particleCanvas.height = window.innerHeight;
             let particlesArray;
-            const setupCanvas = () => {
-                particleCanvas.width = window.innerWidth;
-                particleCanvas.height = window.innerHeight;
-            };
+
             class Particle {
-                constructor(x, y, dirX, dirY, size, color) { this.x=x; this.y=y; this.dirX=dirX; this.dirY=dirY; this.size=size; this.color=color; }
-                draw() { particleCtx.beginPath(); particleCtx.arc(this.x, this.y, this.size, 0, Math.PI*2); particleCtx.fillStyle=this.color; particleCtx.fill(); }
-                update() { if(this.x>particleCanvas.width||this.x<0)this.dirX=-this.dirX; if(this.y>particleCanvas.height||this.y<0)this.dirY=-this.dirY; this.x+=this.dirX; this.y+=this.dirY; this.draw(); }
-            }
-            const initParticles = () => {
-                particlesArray = [];
-                const numParticles = window.innerWidth < 768 ? 30 : 60; // Increased particle count
-                for (let i = 0; i < numParticles; i++) {
-                    const size = Math.random() * 2 + 1;
-                    const x = Math.random() * (particleCanvas.width - size * 2) + size * 2;
-                    const y = Math.random() * (particleCanvas.height - size * 2) + size * 2;
-                    const dirX = (Math.random() * 0.3) - 0.15;
-                    const dirY = (Math.random() * 0.3) - 0.15;
-                    particlesArray.push(new Particle(x, y, dirX, dirY, size, '#778DA9')); // slate-gray
+                constructor(x, y, directionX, directionY, size, color) {
+                    this.x = x;
+                    this.y = y;
+                    this.directionX = directionX;
+                    this.directionY = directionY;
+                    this.size = size;
+                    this.color = color;
                 }
-            };
-            const connectParticles = () => {
+                draw() {
+                    particleCtx.beginPath();
+                    particleCtx.arc(this.x, this.y, this.size, 0, Math.PI * 2, false);
+                    particleCtx.fillStyle = '#778DA9';
+                    particleCtx.fill();
+                }
+                update() {
+                    if (this.x > particleCanvas.width || this.x < 0) { this.directionX = -this.directionX; }
+                    if (this.y > particleCanvas.height || this.y < 0) { this.directionY = -this.directionY; }
+                    this.x += this.directionX;
+                    this.y += this.directionY;
+                    this.draw();
+                }
+            }
+
+            function initParticles() {
+                particlesArray = [];
+                // Fewer particles on smaller screens for better performance
+                let numberOfParticles = window.innerWidth < 768 ? 30 : (particleCanvas.height * particleCanvas.width) / 9000;
+                for (let i = 0; i < numberOfParticles; i++) {
+                    let size = (Math.random() * 2) + 1;
+                    let x = (Math.random() * ((innerWidth - size * 2) - (size * 2)) + size * 2);
+                    let y = (Math.random() * ((innerHeight - size * 2) - (size * 2)) + size * 2);
+                    let directionX = (Math.random() * .4) - .2;
+                    let directionY = (Math.random() * .4) - .2;
+                    particlesArray.push(new Particle(x, y, directionX, directionY, size, '#778DA9'));
+                }
+            }
+
+            function animateParticles() {
+                requestAnimationFrame(animateParticles);
+                particleCtx.clearRect(0, 0, innerWidth, innerHeight);
+                for (let i = 0; i < particlesArray.length; i++) {
+                    particlesArray[i].update();
+                }
+                connectParticles();
+            }
+
+            function connectParticles() {
                 let opacityValue = 1;
                 for (let a = 0; a < particlesArray.length; a++) {
                     for (let b = a; b < particlesArray.length; b++) {
-                        const distance = Math.sqrt(Math.pow(particlesArray[a].x - particlesArray[b].x, 2) + Math.pow(particlesArray[a].y - particlesArray[b].y, 2));
-                        if (distance < (particleCanvas.width / 10)) {
-                            opacityValue = 1 - (distance / 150);
-                            particleCtx.strokeStyle = `rgba(65, 224, 208, ${opacityValue})`; // accent color
+                        let distance = ((particlesArray[a].x - particlesArray[b].x) * (particlesArray[a].x - particlesArray[b].x)) +
+                            ((particlesArray[a].y - particlesArray[b].y) * (particlesArray[a].y - particlesArray[b].y));
+                        if (distance < (particleCanvas.width / 7) * (particleCanvas.height / 7)) {
+                            opacityValue = 1 - (distance / 20000);
+                            particleCtx.strokeStyle = `rgba(65, 224, 208, ${opacityValue})`;
                             particleCtx.lineWidth = 1;
                             particleCtx.beginPath();
                             particleCtx.moveTo(particlesArray[a].x, particlesArray[a].y);
@@ -342,16 +392,16 @@
                         }
                     }
                 }
-            };
-            const animateParticles = () => {
-                requestAnimationFrame(animateParticles);
-                particleCtx.clearRect(0, 0, particleCanvas.width, particleCanvas.height);
-                particlesArray.forEach(p => p.update());
-                connectParticles(); // Re-enabled the plexus effect
-            };
-            setupCanvas(); initParticles(); animateParticles();
-            window.addEventListener('resize', () => { setupCanvas(); initParticles(); });
-        }
+            }
+            
+            window.addEventListener('resize', () => {
+                particleCanvas.width = innerWidth;
+                particleCanvas.height = innerHeight;
+                initParticles();
+            });
+
+            initParticles();
+            animateParticles();
 
         // --- Decryption Text Effect ---
         document.querySelectorAll('[data-effect="decryption"]').forEach(el => {
